3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix for bug #1573294: Flesh displays speed +x and gives lot identification exp.
common/item.c
Patch initially submitted by Aaron Baugher
Yann Chachkoff 2006-12-30

Fix for bug #1528525: Sometimes "bad" initial items are created.
common/treasure.c
Changed the behavior of create_one_treasure, that will now not generate a
treasure whose base object is cursed or damned when the GT_ONLY_GOOD flag is set.
Yann Chachkoff 2006-12-30

common/c_misc.c lib/settings
Fix for bug #1622609: Specific flags no longer displayed with 'who command
Replaced [] by <> in the who output command, as [] are reserved for the various
formatting tags.
Yann Chachkoff 2006-12-29

Fix for bug #1622575: Range attack switches to punching on contact,
 applied patch courtesy Aaron Baugher
 server/skill_util.c: use good flag to not switch.
Ryo 2006-12-27

Fix some crashes observed on metalforge:
common/treasure.c: When generating flesh items from custom monsters,
  update other_arch of the flesh item to point back to the original
  base archetype, not the custom archetype.
random_maps/treasure.c: Create the key object before we reference it
  in find_first_free_spot()
MSW 2006-12-26

Make method/property coherent for Python objects.
 plugins/cfpython/cfpython_archetype.c cfpython_party.c cfpython_region.c
 plugins/cfpython/include/cfpython_archetype_private.h cfpython_party_private.h cfpython_region_private.h
Ryo 2006-12-26

Fix for bug #1527978: summon fog spell is somewhat broken.
Summon now occurs either randomly around (when casting on oneself),
or around, either clockwise or anticlockwise.
 server/pets.c
Ryo 2006-12-26
