@@ -383,9 +383,9 @@ void create_one_treasure(treasurelist *tl, object *op, int flag, int difficulty,
 	    create_one_treasure(tl, op, flag, difficulty, tries);
 	return;
     }
-    if((t->item)&&(flags & GT_ONLY_GOOD)) { /* Generate only good items, damnit !*/
-        if (QUERY_FLAG(t->item->clone,FLAG_CURSED)||
-            QUERY_FLAG(t->item->clone, FLAG_DAMNED))
+    if((t->item)&&(flag & GT_ONLY_GOOD)) { /* Generate only good items, damnit !*/
+        if (QUERY_FLAG(&(t->item->clone),FLAG_CURSED)||
+            QUERY_FLAG(&(t->item->clone), FLAG_DAMNED))
         {
             create_one_treasure(tl, op, flag, difficulty, tries+1);
         }
